Assignment no 12.txt
Question no 1:


ZeroDivisionError

handling:

   a=3

   try:

   	if a<4:

        	a=a/(a-3)

        	print(a)

   except:

   	print("Error")


Error



Question no 2:


IndexError

handling:

   l=[1,2,3]

   n=3

   try:

        if(n<3)

   		print(l[n])
   except:


   	print("Error")


Error



Question no 3:


 Output:

  File "C:/Users/Asus/PycharmProjects/p5/excption handling.py", line 223
    print "An exception"
                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "An exception")?



Question no 4:


  File "C:/Users/Asus/PycharmProjects/p5/excption handling.py", line 230
    print "a/b result in 0"
                          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t "a/b result in 0")?




Question no 5:

 1.ImportError

   import numy



ImportError:No module named 'numy'



   Exception to handle the error

   try:

   	import numy

   except:

   	print("wrong package entered")



    wrong package entered

  

 2.ValueError

   a=int(input("enter a number"))

   print(a)

   

enter a number str

ValueError: invalid literal for int() with base 10: 'str'

   

   Exception to handle the error

   try:

   	a=int(input("enter a number "))

    	print(a)

   except ValueError:

   	print("Wrong input") 

   

enter a number str

Wrong input

   

  3.IndexError

   c=[1,2,3]

   print(c[10])


IndexError: list index out of range

   
   Exception to handle the error   

   c=[1,2,3]

   try:

   	print(c[10])

   except:

   	print("enter correct index number")



enter correct index number



Question no 6:

class Error(Exception):

    pass


class AgeTooSmallError(Error):

    pass


while True:
    try:
        age = int(input("Enter Age:"))
        if age < 18:
            raise AgeTooSmallError
        break
    except AgeTooSmallError:
        print("The age is too small")
        print('Try again!!!')

print("Correct entry")


Enter Age:12
The age is too small
Try again!!!
Enter Age:19
Correct entry